--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,5 @@
 .home {
 
-
-
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -10,11 +8,12 @@
 
     @media @mobile {
 
+      margin: 0 auto;
       max-width: 500px;
       width: 85%;
-      align-self: center;
-      align-items: center;
       flex-direction: column;
+      align-items: center; // Why does this not work?
+      margin-top: 30px;
   
     }
     
@@ -25,6 +24,7 @@
       @media @mobile {
 
         width: 100%;
+        padding-right: 0%;
 
       }
 
@@ -37,6 +37,7 @@
       @media @mobile {
 
         width: 100%;
+        padding-left: 0%;
 
       }
 
@@ -50,12 +51,19 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile {
+
+      flex-direction: column-reverse;
+
+    }
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
 
       @media @mobile {
 
+        padding-left: 0%;
         width: 100%;
 
       }
@@ -68,6 +76,7 @@
 
       @media @mobile {
 
+        padding-right: 0%;
         width: 100%;
 
       }
@@ -82,6 +91,13 @@
     img {
       border-radius: 10px;
     }
+
+    @media @mobile {
+
+      margin-top: 30px;
+
+    }
+
   }
 
   .content-pick {
@@ -90,9 +106,23 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+
+        width: 70%;
+
+      }
 
       .btn {
 
